# server/pb/go_auth_api.pb.go
@@ -26,42 +26,42 @@ var file_proto_go_auth_api_proto_rawDesc = []byte{
 	0x61, 0x70, 0x69, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x12, 0x67, 0x6f, 0x5f, 0x61, 0x75,
 	0x74, 0x68, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x1a, 0x1b, 0x70,
 	0x72, 0x6f, 0x74, 0x6f, 0x2f, 0x67, 0x6f, 0x5f, 0x61, 0x75, 0x74, 0x68, 0x5f, 0x70, 0x61, 0x79,
-	0x6c, 0x6f, 0x61, 0x64, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x32, 0x99, 0x02, 0x0a, 0x0b, 0x55,
+	0x6c, 0x6f, 0x61, 0x64, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x32, 0x9e, 0x02, 0x0a, 0x0b, 0x55,
 	0x73, 0x65, 0x72, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x52, 0x0a, 0x07, 0x47, 0x65,
 	0x74, 0x55, 0x73, 0x65, 0x72, 0x12, 0x22, 0x2e, 0x67, 0x6f, 0x5f, 0x61, 0x75, 0x74, 0x68, 0x2e,
 	0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x55, 0x73,
 	0x65, 0x72, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x23, 0x2e, 0x67, 0x6f, 0x5f, 0x61,
 	0x75, 0x74, 0x68, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x47,
-	0x65, 0x74, 0x55, 0x73, 0x65, 0x72, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x5c,
+	0x65, 0x74, 0x55, 0x73, 0x65, 0x72, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x61,
 	0x0a, 0x0c, 0x52, 0x65, 0x67, 0x69, 0x73, 0x74, 0x65, 0x72, 0x55, 0x73, 0x65, 0x72, 0x12, 0x27,
 	0x2e, 0x67, 0x6f, 0x5f, 0x61, 0x75, 0x74, 0x68, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65,
 	0x2e, 0x76, 0x31, 0x2e, 0x52, 0x65, 0x67, 0x69, 0x73, 0x74, 0x65, 0x72, 0x55, 0x73, 0x65, 0x72,
-	0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x23, 0x2e, 0x67, 0x6f, 0x5f, 0x61, 0x75, 0x74,
-	0x68, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x44, 0x65, 0x66,
-	0x61, 0x75, 0x6c, 0x74, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x58, 0x0a, 0x09,
-	0x4c, 0x6f, 0x67, 0x69, 0x6e, 0x55, 0x73, 0x65, 0x72, 0x12, 0x24, 0x2e, 0x67, 0x6f, 0x5f, 0x61,
-	0x75, 0x74, 0x68, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x4c,
-	0x6f, 0x67, 0x69, 0x6e, 0x55, 0x73, 0x65, 0x72, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a,
-	0x25, 0x2e, 0x67, 0x6f, 0x5f, 0x61, 0x75, 0x74, 0x68, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63,
-	0x65, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x6f, 0x67, 0x69, 0x6e, 0x55, 0x73, 0x65, 0x72, 0x52, 0x65,
-	0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x42, 0x06, 0x5a, 0x04, 0x2e, 0x2f, 0x70, 0x62, 0x62, 0x06,
-	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x28, 0x2e, 0x67, 0x6f, 0x5f, 0x61, 0x75, 0x74,
+	0x68, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x52, 0x65, 0x67,
+	0x69, 0x73, 0x74, 0x65, 0x72, 0x55, 0x73, 0x65, 0x72, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73,
+	0x65, 0x12, 0x58, 0x0a, 0x09, 0x4c, 0x6f, 0x67, 0x69, 0x6e, 0x55, 0x73, 0x65, 0x72, 0x12, 0x24,
+	0x2e, 0x67, 0x6f, 0x5f, 0x61, 0x75, 0x74, 0x68, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65,
+	0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x6f, 0x67, 0x69, 0x6e, 0x55, 0x73, 0x65, 0x72, 0x52, 0x65, 0x71,
+	0x75, 0x65, 0x73, 0x74, 0x1a, 0x25, 0x2e, 0x67, 0x6f, 0x5f, 0x61, 0x75, 0x74, 0x68, 0x2e, 0x73,
+	0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x6f, 0x67, 0x69, 0x6e, 0x55,
+	0x73, 0x65, 0x72, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x42, 0x06, 0x5a, 0x04, 0x2e,
+	0x2f, 0x70, 0x62, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var file_proto_go_auth_api_proto_goTypes = []any{
-	(*GetUserRequest)(nil),      // 0: go_auth.service.v1.GetUserRequest
-	(*RegisterUserRequest)(nil), // 1: go_auth.service.v1.RegisterUserRequest
-	(*LoginUserRequest)(nil),    // 2: go_auth.service.v1.LoginUserRequest
-	(*GetUserResponse)(nil),     // 3: go_auth.service.v1.GetUserResponse
-	(*DefaultResponse)(nil),     // 4: go_auth.service.v1.DefaultResponse
-	(*LoginUserResponse)(nil),   // 5: go_auth.service.v1.LoginUserResponse
+	(*GetUserRequest)(nil),       // 0: go_auth.service.v1.GetUserRequest
+	(*RegisterUserRequest)(nil),  // 1: go_auth.service.v1.RegisterUserRequest
+	(*LoginUserRequest)(nil),     // 2: go_auth.service.v1.LoginUserRequest
+	(*GetUserResponse)(nil),      // 3: go_auth.service.v1.GetUserResponse
+	(*RegisterUserResponse)(nil), // 4: go_auth.service.v1.RegisterUserResponse
+	(*LoginUserResponse)(nil),    // 5: go_auth.service.v1.LoginUserResponse
 }
 var file_proto_go_auth_api_proto_depIdxs = []int32{
 	0, // 0: go_auth.service.v1.UserService.GetUser:input_type -> go_auth.service.v1.GetUserRequest
 	1, // 1: go_auth.service.v1.UserService.RegisterUser:input_type -> go_auth.service.v1.RegisterUserRequest
 	2, // 2: go_auth.service.v1.UserService.LoginUser:input_type -> go_auth.service.v1.LoginUserRequest
 	3, // 3: go_auth.service.v1.UserService.GetUser:output_type -> go_auth.service.v1.GetUserResponse
-	4, // 4: go_auth.service.v1.UserService.RegisterUser:output_type -> go_auth.service.v1.DefaultResponse
+	4, // 4: go_auth.service.v1.UserService.RegisterUser:output_type -> go_auth.service.v1.RegisterUserResponse
 	5, // 5: go_auth.service.v1.UserService.LoginUser:output_type -> go_auth.service.v1.LoginUserResponse
 	3, // [3:6] is the sub-list for method output_type
 	0, // [0:3] is the sub-list for method input_type
